# atm-dev

./: .gitignore  CLAUDE.md  README.md  config.yaml  dev.sh  main.py  package-lock.json  pyproject.toml  requirements.txt  run_tests.py  start-backend.sh  start-frontend.sh
.claude/: launch.json  settings.json  setup.sh
ats/: .env.example  .gitignore  config.yaml  requirements.txt
ats/analytics/: indicators.py
ats/api/: app.py  backtest_routes.py  esf_intraday_routes.py  esf_journal_routes.py  futures_routes.py  live_data_service.py  market_overview.py  rebalance_routes.py  replay_results_routes.py  routes.py  sim_routes.py  ticker_list.py
ats/backtest/: __init__.py  __main__.py  data_downloader.py  data_provider.py  engine.py  futures_backtester.py  historical_engine.py  intraday_backtester.py  (+7 more)
backtest/: data_loader.py  null_notifier.py  result.py  simulated_broker.py
code-review/: 00-summary.md  01-backend-review.md  02-frontend-review.md  03-theory-gap-analysis.md  04-config-audit.md  05-test-coverage.md  06-action-plan.md  plan.md
common/: enums.py  types.py
core/: state_manager.py
data/: config_manager.py  market_data.py
docs/: claude-web-to-local-guide.md  persona.md
github/: pr.md
infra/: logger.py
position/: position_manager.py
results/: equity_curve.csv  trades.csv
risk/: risk_manager.py
scripts/: generate_backtest_data.py  setup_cron.sh
stock_theory/: kospi200_futures_simulation.md  optionCalculator.md
strategy/: base.py  momentum_swing.py
tests/: conftest.py
web/: index.html  package-lock.json  package.json  vite.config.ts
(+320 files in other folders)
