[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ats"
version = "1.0.0"
description = "Automated Trading System"
requires-python = ">=3.9"

[tool.setuptools.packages.find]
where = ["."]
include = ["ats*"]

[tool.setuptools.package-dir]
"" = "ats"

[tool.pytest.ini_options]
testpaths = ["ats/tests"]
pythonpath = ["ats"]
